fix overflow issue on single view poster

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,6 +410,7 @@
     background-size: cover;
     background-repeat: inherit;
     object-fit: cover;
+    overflow: auto;
   }
   
   .hero-full-screen .middle-content-section {
